# telecarla

./: .clang-format  .clang-tidy  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CPPLINT.cfg  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  requirements.txt
docker/: Dockerfile  (+1 more)
gstreaming/: CMakeLists.txt  README.md  package.xml
gstreaming/cfg/: RateControl.cfg
gstreaming/cmake/: FindGLIB.cmake  FindGStreamer.cmake
gstreaming/config/: watchers_linux.xml
gstreaming/launch/rtsp/: rtsp_client.launch  rtsp_server.launch  rtsp_server_v4l2src.launch  rtsp_server_videotestsrc.launch
gstreaming/setup/: install_gstreamer.sh  install_gstreamer_from_src.sh
gstreaming/source/: CMakeLists.txt
gstreaming/source/client/: CMakeLists.txt
gstreaming/source/client/include/: rtsp_client.h
gstreaming/source/client/src/: rtsp_client.cpp
gstreaming/source/common/: CMakeLists.txt
gstreaming/source/common/include/: gst_lifecycle.h  pipeline_state.h
gstreaming/source/common/src/: gst_lifecycle.cpp  pipeline_state.cpp
gstreaming/source/include/: gstreaming_client.h  gstreaming_server.h
gstreaming/source/rtsp/: CMakeLists.txt
gstreaming/source/rtsp/client/: CMakeLists.txt
gstreaming/source/rtsp/common/: CMakeLists.txt
gstreaming/source/rtsp/server/: CMakeLists.txt
gstreaming/source/server/: CMakeLists.txt
gstreaming/source/server/include/: gst_server_app_source.h  gst_server_context.h  gst_server_encoder.h  gst_server_util.h  rtsp_server.h  rtsp_server_util.h
gstreaming/source/server/src/: gst_server_app_source.cpp  gst_server_context.cpp  gst_server_encoder.cpp  gst_server_util.cpp  rtsp_server.cpp  rtsp_server_util.cpp
gstreaming/source/src/: gstreaming_client.cpp  gstreaming_client_node.cpp  gstreaming_server.cpp  gstreaming_server_node.cpp
gstreaming/test/: CMakeLists.txt
gstreaming/test/rostest/: CMakeLists.txt  main.cpp  simple_ros_test.cpp
gstreaming/test/rostest/launch/: clienttest_no_server_input.test  clienttest_with_server_input.test  gtest.test
gstreaming/test/unittest/: CMakeLists.txt  main.cpp  simple_unit_test.cpp
telecarla/: CMakeLists.txt  README.md  package.xml
telecarla/launch/: telecarla_multi_client.launch  telecarla_multi_local.launch  telecarla_multi_server.launch  telecarla_single_client.launch  telecarla_single_local.launch  telecarla_single_server.launch
telecarla_gui/: CMakeLists.txt  README.md  package.xml
telecarla_gui/config/: multi_cam_gui_config.json  single_cam_gui_config.json  single_cam_status_gui_config.json  wheel_config.yml
telecarla_gui/launch/: telecarla_gui.launch  telecarla_gui_remote_carla.launch
telecarla_gui/script/: install_dependencies.sh
telecarla_gui/source/: CMakeLists.txt
telecarla_gui/source/gui/: CMakeLists.txt
telecarla_gui/source/gui/include/: gui_parameter.h  joystick_parameter.h  sdl_event_parser.h  sdl_gui.h  sdl_lifecycle.h  sdl_wheel_controller.h
telecarla_gui/source/include/: image_callback.h  status_callback.h  telecarla_gui.h
telecarla_gui/source/math/: CMakeLists.txt
telecarla_gui/source/src/: image_callback.cpp  status_callback.cpp  telecarla_gui.cpp  telecarla_gui_node.cpp
telecarla_gui/source/util/: CMakeLists.txt
telecarla_gui/test/: CMakeLists.txt  simple_test.cpp
telecarla_gui/test/config/: one_camera_config.json  static_text_config.json  three_camera_config.json  two_camera_config.json  vehicle_status_config.json
telecarla_gui/test/gui/: gui_parameter_test.cpp
telecarla_gui/test/math/: linear_function_test.cpp
telecarla_gui/test/static/: CMakeLists.txt  linear_function_test.cpp
telecarla_gui/test/util/: linear_function_test.cpp  steer_cache_test.cpp
telecarla_manual_control/: CMakeLists.txt  README.md  package.xml  setup.py
telecarla_manual_control/config/: 6_camera_client.perspective  6_camera_server.perspective  multi_sensors.json  multi_sensors_bmw.json  single_sensors.json  wheel_config.ini
telecarla_manual_control/launch/: carla_ros_bridge_with_ego_vehicle.launch  telecarla_manual_control.launch  telecarla_manual_control_ctrl.launch  telecarla_manual_control_view.launch
telecarla_manual_control/src/: telecarla_manual_control_ctrl.py  telecarla_manual_control_view.py
telecarla_msgs/: CMakeLists.txt  package.xml
telecarla_msgs/msg/: FrameStatistics.msg  TeleopMode.msg
telecarla_rpc/: CMakeLists.txt  README.md  package.xml
telecarla_rpc/launch/: telecarla_rpc_client.launch  telecarla_rpc_server.launch
telecarla_rpc/script/: install.sh
telecarla_rpc/source/: CMakeLists.txt
telecarla_rpc/source/client/: CMakeLists.txt
telecarla_rpc/source/com/: CMakeLists.txt
telecarla_rpc/source/common/: CMakeLists.txt
telecarla_rpc/source/data/: CMakeLists.txt
telecarla_rpc/source/include/: telecarla_rpc_client.h  telecarla_rpc_server.h
telecarla_rpc/source/server/: CMakeLists.txt
telecarla_rpc/source/src/: telecarla_rpc_client.cpp  telecarla_rpc_client_node.cpp  telecarla_rpc_server.cpp  telecarla_rpc_server_node.cpp
telecarla_scenario_runner/: CMakeLists.txt  README.md  package.xml  requirements.txt
telecarla_scenario_runner/config/: multi_sensors.json  single_sensors.json
telecarla_scenario_runner/doc/: scenarios.md
telecarla_scenario_runner/launch/: telecarla_multi_local_scenario_evaluation.launch  telecarla_multi_server_scenario_evaluation.launch  telecarla_scenario_evaluation_runner.launch  telecarla_single_local_scenario_evaluation.launch  telecarla_single_server_scenario_evaluation.launch
telecarla_scenario_runner/scenarios/: Boxed.xosc  ObstacleAndPedestrian.xosc  ObstacleAndPedestrian1.xosc  Pedestrians.xosc  Pedestrians1.xosc  PedestriansLeftSide.xosc  PedestriansLeftSide1.xosc  README.md  SlalomModified.xosc
telecarla_scenario_runner/scenarios/catalogs/: EnvironmentCatalog.xosc  ManeuverCatalog.xosc  MiscObjectCatalog.xosc  PedestrianCatalog.xosc  VehicleCatalog.xosc
telecarla_scenario_runner/script/: kill_heroes.py  launchfile_runner_based_on_adaptation_param.sh  plot_results.py  scenario_evaluation.py
telecarla_scenario_runner/src/: telecarla_scenario_runner_node.py
(+56 files in other folders)
