<package format="2">
    <name>gstreaming</name>
    <version>1.0.0</version>
    <description>LMT GStreamer based streaming package</description>
    <maintainer email="name.surname@tum.de">Markus Hofbauer</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/hofbi/telecarla</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>

    <exec_depend>dynamic_reconfigure</exec_depend>

    <test_depend>rosunit</test_depend>
    <test_depend>rostest</test_depend>
</package>