<package format="2">
    <name>telecarla</name>
    <version>0.0.0</version>
    <description>The carla teleoperated driving package</description>
    <maintainer email="name.surname@tum.de">Markus Hofbauer</maintainer>
    <author email="name.surname@tum.de">Markus Hofbauer</author>
    <license>MIT</license>
    <url type="website">https://github.com/hofbi/telecarla</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <exec_depend>telecarla_manual_control</exec_depend>
    <exec_depend>telecarla_gui</exec_depend>
    <exec_depend>telecarla_rpc</exec_depend>
    <exec_depend>gstreaming</exec_depend>

    <export>
    </export>
</package>