<package format="2">
    <name>telecarla_rpc</name>
    <version>0.0.0</version>
    <description>The carla teleoperated driving remote process communication package</description>
    <maintainer email="name.surname@tum.de">Markus Hofbauer</maintainer>
    <author email="name.surname@tum.de">Markus Hofbauer</author>
    <license>MIT</license>
    <url type="website">https://github.com/hofbi/telecarla</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>carla_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <export>
    </export>
</package>